2000-09-02  Paolo Nenzi <p.nenzi@ieee.org>
     * Patched with code sent by Alan Gillespie. See more on top
       level ChangeLog.

2000-07-07  Arno W. Peters  <A.W.Peters@ieee.org>

	* circuit/inp2b.c, circuit/inp2c.c, circuit/inp2d.c,
	circuit/inp2dot.c, circuit/inp2e.c, circuit/inp2f.c,
	circuit/inp2g.c, circuit/inp2h.c, circuit/inp2i.c,
	circuit/inp2j.c, circuit/inp2k.c, circuit/inp2l.c,
	circuit/inp2m.c, circuit/inp2o.c, circuit/inp2q.c,
	circuit/inp2r.c, circuit/inp2s.c, circuit/inp2t.c,
	circuit/inp2u.c, circuit/inp2v.c, circuit/inp2w.c,
	circuit/inp2z.c: Added ; after macros.

2000-05-22  Paolo Nenzi <p.nenzi@ieee.org>

	* inp2dot.c: Applied Widlok patch.

	* inpdoopt.c: Applied Widolok patch:commented the entire function,
	seems obsolete.

	* inpptree.c, ptfuncs.c: Applied Widlok patch. Now there is a new
	step function called u2.

2000-04-04  Paolo Nenzi <p.nenzi@ieee.org>
    
	* inpfindl.c: Modified the file for BSIM4 and future extensions to
                      BSIM5 and BSIM6. I have merged the inpfindl.c coming 
		      with the BSIM4 distribution.

	* inp2r.c:    Added acval=val to initialize the acval parameter to
	              a significative value. Hope does not brak anything. 

	* inp2m.c:    Added BSIM4 support.

	* inpdomod.c: Added support for BSIM4 device model.

2000-03-28  Paolo Nenzi <p.nenzi@ieee.org>

	* ptfuncs.c: I have applied a couple of patches by GLAO Dezay. He
	noted that PTln, PTlog and PTsqrt returned non consistent values
	if the argument was out of domain. If arg <0 they returned
	f(-arg). The patch is masked by #ifdef EXPERIMENTAL_CODE.  You
	have to remove these lines or #define it to compile Dezai's
	patched code.

2000-03-11 Paolo Nenzi <p.nenzi@ieee.org>

	* inp2dot.c: Applied Glao Dezai patch, adding which = -1 in the
	.sens code.
 
2000-01-17 Paolo Nenzi  <p.nenzi@ieee.org>

	* inp2m.c, inpdomod.c: Inserted code to dupport BSIM3V1 model as
	level 49.
	
2000-01-16 Paolo Nenzi  <p.nenzi@ieee.org>
